--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             <li><a href="Achievements.html">Our Achievements</a></li>
           <li><a class="drop">Students' Corner</a>
             <ul>
-              <li><a href="ClassX.html">Class X Results</a></li>
-              <li><a href="ClassXII.html">Class XII Results</a></li>
+              <li><a href="ClassX.html">Class 10th Results</a></li>
+              <li><a href="ClassXII.html">Class 12th Results</a></li>
               <li><a href="pages/mirror.pdf">School Magazine</a></li>
               <li><a class="drop">Gallery</a>
                 <ul>
